# bill-chatbot

./: .gitignore  README.md  pyproject.toml
src/: main.py  schemas.py  test_extractors.py
